deployment/tile-server/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tile-server-private
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: tile-server
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: controller
      ports:
        - protocol: TCP
          port: 8080
